--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/TransportUnitView.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/TransportUnitView.mxml
@@ -104,7 +104,7 @@
     <mx:HRule x="10" y="53" width="95%"/>
 
 	<mx:HBox x="10" y="63" width="95%" height="100%">
-		<mx:DataGrid id="transportUnitsGrid" width="100%" height="95%" doubleClickEnabled="true" doubleClick="showDetails()" itemClick="onRowClick(event)" allowMultipleSelection="true" dataProvider="{modelLocator.allTransportUnits}" x="0" y="10">
+		<mx:DataGrid id="transportUnitsGrid" width="100%" height="95%" doubleClickEnabled="true" doubleClick="showDetails()" change="onRowClick(event)" allowMultipleSelection="true" dataProvider="{modelLocator.allTransportUnits}" x="0" y="10">
 			<mx:columns>
 				<mx:DataGridColumn headerText="Barcode" dataField="barcode" />
                 <mx:DataGridColumn headerText="Type" dataField="transportUnitType" />
