Minor changes in screen handling
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@832 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/dialogs/CreateLocationTypeDialog.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/dialogs/CreateLocationTypeDialog.mxml
@@ -42,7 +42,10 @@
 
 
             private function createLocationType():void {
-                if (ValidationUtil.validateField(lengthTxt, numberVal) && ValidationUtil.validateField(widthTxt, numberVal) && ValidationUtil.validateField(heightTxt, numberVal) && stringVal.validate().type == ValidationResultEvent.VALID) {
+                if (ValidationUtil.validateField(lengthTxt, numberVal) &&
+                    ValidationUtil.validateField(widthTxt, numberVal) &&
+                    ValidationUtil.validateField(heightTxt, numberVal) &&
+                    stringVal.validate().type == ValidationResultEvent.VALID) {
                     var event:LocationTypeEvent=new LocationTypeEvent(LocationTypeEvent.CREATE_LOCATION_TYPE);
                     var locationType:LocationType=new LocationType();
                     locationType.withType(typeTxt.text);
