--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/dialogs/CreateTransportUnitTypeDialog.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/dialogs/CreateTransportUnitTypeDialog.mxml
@@ -3,6 +3,8 @@
 	
 	<mx:Script>
 		<![CDATA[
+			import mx.events.ValidationResultEvent;
+			import org.openwms.web.flex.client.util.ValidationUtil;
 			import org.openwms.web.flex.client.common.event.TransportUnitTypeEvent;
 			import org.openwms.common.domain.TransportUnitType;
 			import org.openwms.web.flex.client.common.event.TransportUnitEvent;
@@ -24,20 +26,27 @@
             
             private function createTransportUnitType():void
             {
-            	var event:TransportUnitTypeEvent = new TransportUnitTypeEvent(TransportUnitTypeEvent.CREATE_TRANSPORT_UNIT_TYPE);
-            	
-            	var transportUnitType:TransportUnitType = new TransportUnitType();
-            	transportUnitType.type = typeTxt.text;
-            	transportUnitType.length = int(lengthTxt.text);
-            	transportUnitType.width = int(widthTxt.text);
-            	transportUnitType.height = int(heightTxt.text);
-            	transportUnitType.weightTare = Number(weightTareTxt.text);
-            	transportUnitType.weightMax = Number(weightMaxTxt.text);
-            	transportUnitType.description = descriptionTxt.text;
-            	
-            	event.data = transportUnitType;
-            	event.dispatch();
-            	closeDialog();
+                if (ValidationUtil.validateField(lengthTxt, numberVal) &&
+                    ValidationUtil.validateField(widthTxt, numberVal) &&
+                    ValidationUtil.validateField(heightTxt, numberVal) &&
+                    ValidationUtil.validateAndFormat(weightTareTxt, doubleVal, numberFmt) &&
+                    ValidationUtil.validateAndFormat(weightMaxTxt, doubleVal, numberFmt) &&
+                    stringVal.validate().type == ValidationResultEvent.VALID) {
+
+	            	var event:TransportUnitTypeEvent = new TransportUnitTypeEvent(TransportUnitTypeEvent.CREATE_TRANSPORT_UNIT_TYPE);
+	            	var transportUnitType:TransportUnitType = new TransportUnitType();
+	            	transportUnitType.type = typeTxt.text;
+	            	transportUnitType.length = int(lengthTxt.text);
+	            	transportUnitType.width = int(widthTxt.text);
+	            	transportUnitType.height = int(heightTxt.text);
+	            	transportUnitType.weightTare = Number(weightTareTxt.text);
+	            	transportUnitType.weightMax = Number(weightMaxTxt.text);
+	            	transportUnitType.description = descriptionTxt.text;
+	            	
+	            	event.data = transportUnitType;
+	            	event.dispatch();
+	            	closeDialog();
+                    }
             }
 
 	        private function keyEventHandler(event:KeyboardEvent):void
@@ -51,19 +60,31 @@
             
 	]]>
 	</mx:Script>
+
+    <mx:NumberFormatter id="numberFmt" precision="2"/>
+    <mx:NumberValidator id="numberVal" property="text"/>
+    <mx:NumberValidator id="doubleVal" property="text" precision="2"/>
+    <mx:StringValidator id="stringVal" minLength="1" source="{typeTxt}" property="text"/>
+
 	<mx:Canvas width="100%" height="100%" backgroundColor="#F1F07C">
 		<mx:Label x="158" y="10" text="Type" fontSize="22" fontWeight="bold"/>
+        <mx:TextInput id="typeTxt" x="230" y="8" fontSize="22" width="280"/>
+
 		<mx:Label x="141" y="51" text="Length" fontSize="22"/>
+        <mx:TextInput id="lengthTxt" x="230" y="49" fontSize="22" width="280"/>
+
 		<mx:Label x="152" y="92" text="Width" fontSize="22"/>
+        <mx:TextInput id="widthTxt" x="230" y="90" fontSize="22" width="280"/>
+
 		<mx:Label x="144" y="133" text="Height" fontSize="22"/>
+        <mx:TextInput id="heightTxt" x="230" y="131" fontSize="22" width="280"/>
+
 		<mx:Label x="82" y="174" text="Weight Tare" fontSize="22"/>
+        <mx:TextInput id="weightTareTxt" x="230" y="172" fontSize="22" width="280"/>
+
 		<mx:Label x="24" y="215" text="Maximum Weight" fontSize="22"/>
-		<mx:TextInput id="typeTxt" x="230" y="8" fontSize="22" width="280"/>
-		<mx:TextInput id="lengthTxt" x="230" y="49" fontSize="22" width="280"/>
-		<mx:TextInput id="widthTxt" x="230" y="90" fontSize="22" width="280"/>
-		<mx:TextInput id="heightTxt" x="230" y="131" fontSize="22" width="280"/>
-		<mx:TextInput id="weightTareTxt" x="230" y="172" fontSize="22" width="280"/>
 		<mx:TextInput id="weightMaxTxt" x="230" y="213" fontSize="22" width="280"/>
+
 		<mx:Label x="94" y="259" text="Description" fontSize="22"/>
 		<mx:TextArea id="descriptionTxt" x="230" y="258" width="280" height="73" fontSize="22"/>
 		<mx:HBox x="0" y="374" width="100%" horizontalAlign="center">
