--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/LoginView.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/LoginView.mxml
@@ -21,8 +21,8 @@
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  */
 -->
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="300" height="200" backgroundColor="#FFFFFF"
-	backgroundAlpha="0.5">
+<mx:TitleWindow xmlns:mx="http://www.adobe.com/2006/mxml" width="300" height="200" backgroundColor="#FFFFFF"
+	backgroundAlpha="0.5" borderStyle="solid" alpha="1" borderThickness="3">
 
     <mx:Metadata>
         [Event(name="login", type="org.openwms.web.flex.client.event.SecurityEvent")]
@@ -56,4 +56,4 @@
 		</mx:FormItem>
 	</mx:Form>
 
-</mx:Canvas>     
+</mx:TitleWindow>     
