Applied Spring Security
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@834 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
@@ -25,6 +25,7 @@
 <!-- When using BlazeDS with SBI instead of GraniteDS than uncomment the RemoteObjects 
 	<mx:RemoteObject id="locationService" endpoint="http://127.0.0.1:8380/OpenWMS/messagebroker/amf" destination="locationServiceProxy" showBusyCursor="true"/>
 	<mx:RemoteObject id="locationGroupService" endpoint="http://127.0.0.1:8380/OpenWMS/messagebroker/amf" destination="locationGroupServiceProxy" showBusyCursor="true"/>
+-->
 
 	<granite:SecureRemoteObject
         id="locationService"
@@ -35,10 +36,16 @@
         id="locationGroupService"
         destination="locationGroupService"
         showBusyCursor="true"/>
--->
+
+    <granite:SecureRemoteObject
+        id="userService"
+        destination="userService"
+        showBusyCursor="true"/>
+<!--
 <mx:RemoteObject id="locationService" destination="locationService" showBusyCursor="true" />
 <mx:RemoteObject id="locationGroupService" destination="locationGroupService" showBusyCursor="true" />
 <mx:RemoteObject id="userService" destination="userService" showBusyCursor="true" />
+-->
 <mx:RemoteObject id="transportUnitService" destination="transportUnitService" showBusyCursor="true" />
 <mx:RemoteObject id="moduleManagementService" destination="moduleManagementService" showBusyCursor="true" />
 
